first attempt at mutation testing