@@ -4,6 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'com.diffplug.spotless' version '6.25.0'
 	id 'jacoco'
+	id 'info.solidsoft.pitest' version '1.19.0-rc.2'
 }
 
 group = 'com.backend'
@@ -67,4 +68,47 @@ jacocoTestReport {
 		csv.required = false
 		html.required = true
 	}
+}
+
+pitest {
+	junit5PluginVersion = '1.2.3'
+
+	targetClasses = [
+			'com.backend.coapp.util.*',
+//			'com.backend.coapp.handler.*',
+	]
+
+	targetTests = ['com.backend.coapp.*']
+
+	excludedClasses = [
+			'com.backend.coapp.CoAppApplication',
+			'com.backend.coapp.config.*',
+			'com.backend.coapp.dto.*',
+			'com.backend.coapp.model.document.*',
+			'com.backend.coapp.model.enumeration.*',
+			'com.backend.coapp.exception.*',
+	]
+
+	excludedTestClasses = [
+			'com.backend.coapp.CoAppApplicationTests',
+			'com.backend.coapp._integration.*',
+			'com.backend.coapp.repository.*',
+			'com.backend.coapp.config.*',
+
+			'com.backend.coapp.service.*',
+			'com.backend.coapp.controller.*',
+	]
+
+	threads = 4
+	timestampedReports = false
+	outputFormats = ['XML', 'HTML']
+
+	// Correct property — replaces the invalid "withHistory = true"
+	enableDefaultIncrementalAnalysis = true
+
+	mutationThreshold = 70
+	coverageThreshold = 50
+
+	jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+			   '-XX:+EnableDynamicAgentLoading']
 }
